---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2024-10-07
  Bugfixes:
    - Changed position of steel plate icon
    - Moved krastorio matter-conversion and matter-deconversion recipes to base products item group
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2024-10-08
  Features:
    - Update locale for rockets
    - Improved rocket graphics
  Bugfixes:
    - Putting wrong explorer into rocket now results in loosing it
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2024-10-07
  Features:
    - Added locale for en
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2024-10-05
  Features:
    - Changed order of many icons and recipes in inventory and crafting menu
    - Many recipes are now hidden from player
  Bugfixes:
    - Renamed rare metal to rare metals
    - Nanoflex is now unlocked by researching nanobots
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2024-09-29
  Features:
    - Added personal roboports mk3 and mk4
    - Added more uses to neodymium magnets
  Bugfixes:
    - Updated military tech tree and recipes
    - Updated ai core recipe
    - Deuterium recipe unlocked with fusion energy tech
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-09-28
  Bugfixes:
    - blocked decomposition for recipes with multiple outputs. The total raw calculation in recipes resulted in "Too complex" error.
    - light emitting diode is now researched with advanced electronics 2
    - Reduced size of mod from 250 MB to 50 MB
    - Fixed contact link