@@ -1,0 +1,2 @@
+
+-- local constants = require("__Krastorio2__.scripts.constants")  -- Might be needed in the future, so i leave it here :)
